fix z-index on tooltips and modals

--- a/src/scss/_tooltips.scss
+++ b/src/scss/_tooltips.scss
@@ -12,6 +12,7 @@ $tooltips: (
 [data-tooltip],
 [data-tooltip-top] {
   position: relative;
+  z-index: 0;
 
   &:before {
     position: absolute;
